--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>02</title>
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Sen:wght@700&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- Reset Css -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
 
@@ -12,6 +27,128 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <h1>Project2-F8</h1>
+    <main style="height: 10000px">
+      <!-- Header -->
+      <header class="header fixed">
+        <div class="main-content">
+          <div class="body">
+            <!-- Logo -->
+            <img src="./assets/img/Lesson..svg" alt="Lesson." class="logo" />
+
+            <!-- Nav -->
+            <nav class="nav">
+              <ul>
+                <li class="active">
+                  <a href="#!">Home</a>
+                </li>
+                <li>
+                  <a href="#!">Courses</a>
+                </li>
+                <li>
+                  <a href="#!">Pricing</a>
+                </li>
+                <li>
+                  <a href="#!">Reviews</a>
+                </li>
+              </ul>
+            </nav>
+
+            <!-- Action -->
+            <div class="action">
+              <a href="#!" class="btn sign-up-btn">Sign Up</a>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- Hero -->
+      <div class="hero">
+        <div class="main-content">
+          <div class="body">
+            <div class="media-block">
+              <img
+                src="./assets/img/hero-img.jpg"
+                alt="Learn without limits and spread knowledge."
+                class="img"
+              />
+
+              <div class="hero-summary">
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/UIUXlogo.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">UI/UX Design</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/Devlogo.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">20 Courses</p>
+                    <p class="title">Development</p>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="icon">
+                    <img src="./assets/img/Marketinglogo.svg" alt="" />
+                  </div>
+                  <div class="info">
+                    <p class="label">30 Courses</p>
+                    <p class="title">Marketing</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="content-block">
+              <h1 class="heading">
+                Learn without limits and spread knowledge.
+              </h1>
+              <p class="desc">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+              <div class="cta-group">
+                <a href="#!" class="btn hero-cta">See Courses</a>
+                <button class="watch-video">
+                  <div class="icon">
+                    <img src="./assets/img/Herowatchlogo.svg" alt="" />
+                  </div>
+                  <span>Watch Video</span>
+                </button>
+              </div>
+              <p class="desc">Recent engagement</p>
+              <p class="desc stats">
+                <strong>50K</strong> Students <strong>70+</strong> Courses
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="popular">
+        <div class="main-content">
+          <div class="popular-top">
+            <div class="info">
+              <h2 class="heading">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+            <div class="controls">
+              <button class="control-btn">
+                <i class="fa-solid fa-chevron-left"></i>
+              </button>
+              <button class="control-btn">
+                <i class="fa-solid fa-chevron-right"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
