--- a/index.html
+++ b/index.html
@@ -27,39 +27,39 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    <main style="height: 10000px">
-      <!-- Header -->
-      <header class="header fixed">
-        <div class="main-content">
-          <div class="body">
-            <!-- Logo -->
-            <img src="./assets/img/Lesson..svg" alt="Lesson." class="logo" />
+    <header class="header fixed">
+      <div class="main-content">
+        <div class="body">
+          <!-- Logo -->
+          <img src="./assets/img/Lesson..svg" alt="Lesson." class="logo" />
 
-            <!-- Nav -->
-            <nav class="nav">
-              <ul>
-                <li class="active">
-                  <a href="#!">Home</a>
-                </li>
-                <li>
-                  <a href="#!">Courses</a>
-                </li>
-                <li>
-                  <a href="#!">Pricing</a>
-                </li>
-                <li>
-                  <a href="#!">Reviews</a>
-                </li>
-              </ul>
-            </nav>
+          <!-- Nav -->
+          <nav class="nav">
+            <ul>
+              <li class="active">
+                <a href="#!">Home</a>
+              </li>
+              <li>
+                <a href="#!">Courses</a>
+              </li>
+              <li>
+                <a href="#!">Pricing</a>
+              </li>
+              <li>
+                <a href="#!">Reviews</a>
+              </li>
+            </ul>
+          </nav>
 
-            <!-- Action -->
-            <div class="action">
-              <a href="#!" class="btn sign-up-btn">Sign Up</a>
-            </div>
+          <!-- Action -->
+          <div class="action">
+            <a href="#!" class="btn sign-up-btn">Sign Up</a>
           </div>
         </div>
-      </header>
+      </div>
+    </header>
+    <main>
+      <!-- Header -->
       <!-- Hero -->
       <div class="hero">
         <div class="main-content">
@@ -102,7 +102,7 @@
               </div>
             </div>
             <div class="content-block">
-              <h1 class="heading">
+              <h1 class="heading lv1">
                 Learn without limits and spread knowledge.
               </h1>
               <p class="desc">
@@ -132,7 +132,7 @@
         <div class="main-content">
           <div class="popular-top">
             <div class="info">
-              <h2 class="heading">Our popular courses</h2>
+              <h2 class="heading lv2">Our popular courses</h2>
               <p class="desc">
                 Build new skills with new trendy courses and shine for the next
                 future career.
@@ -147,8 +147,418 @@
               </button>
             </div>
           </div>
+          <div class="course-list">
+            <!-- Course-items 1 -->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course1.jpg"
+                  alt="Basic web design"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp word-break-all"
+                      >Basic web design</a
+                    >
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/img/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc" class="line-clamp line-2 word-break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- Course-items 2 -->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course2.jpg"
+                  alt="UI/UX design"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp word-break-all"
+                      >UI/UX design</a
+                    >
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/img/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc" class="line-clamp line-2 word-break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- Course-items 3 -->
+            <div class="course-item">
+              <a href="#!">
+                <img
+                  src="./assets/img/course3.jpg"
+                  alt="Web App design"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title">
+                    <a href="#!" class="line-clamp word-break-all"
+                      >Web App design</a
+                    >
+                  </h3>
+                  <div class="rating">
+                    <img src="./assets/img/star.svg" alt="" class="star" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc" class="line-clamp line-2 word-break-all">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn book-btn">Book Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="feedback">
+        <div class="main-content">
+          <div class="feedback-list">
+            <div class="feedback-item">
+              <div class="info">
+                <img
+                  src="./assets/img/feedback-logo.svg"
+                  alt="Peter Moor"
+                  class="avatar"
+                />
+                <p class="title">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <div class="dot active"></div>
+                  <div class="dot"></div>
+                  <div class="dot"></div>
+                </div>
+              </div>
+
+              <div class="content">
+                <img
+                  src="./assets/img/quotes-icon.svg"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="feedback-item">
+              <div class="info">
+                <img
+                  src="./assets/img/feedback-logo.svg"
+                  alt="Peter Moor"
+                  class="avatar"
+                />
+                <p class="title">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <div class="dot"></div>
+                  <div class="dot active"></div>
+                  <div class="dot"></div>
+                </div>
+              </div>
+
+              <div class="content">
+                <img
+                  src="./assets/img/quotes-icon.svg"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="feedback-item">
+              <div class="info">
+                <img
+                  src="./assets/img/feedback-logo.svg"
+                  alt="Peter Moor"
+                  class="avatar"
+                />
+                <p class="title">Peter Moor</p>
+                <p class="desc">Student of Web Design</p>
+                <div class="dots">
+                  <div class="dot"></div>
+                  <div class="dot"></div>
+                  <div class="dot active"></div>
+                </div>
+              </div>
+
+              <div class="content">
+                <img
+                  src="./assets/img/quotes-icon.svg"
+                  alt=""
+                  class="open-quotes"
+                />
+                <blockquote>
+                  Not only does my resume look impressive—filled with the names
+                  and logos of world-class institutions—but these certificates
+                  also bring me closer to my career goals by validating the
+                  skills I've learned."
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="feature">
+        <div class="main-content">
+          <div class="body">
+            <div class="image">
+              <img
+                src="./assets/img/feature1.jpg"
+                alt="Learner outcomes through our awesome platform"
+                class="lower"
+              />
+              <img
+                src="./assets/img/featture2.jpg"
+                alt="Learner outcomes through our awesome platform"
+              />
+            </div>
+            <div class="content">
+              <h2 class="heading lv2">
+                Learner outcomes through our awesome platform
+              </h2>
+              <p class="desc">
+                87% of people learning for professional development report
+                career benefits like getting a promotion, a raise, or starting a
+                new career.
+              </p>
+              <p class="desc">Lesson Impact Report (2022)</p>
+              <a href="#!" class="btn cta-btn">Sign Up</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="feature feature-2nd">
+        <div class="main-content">
+          <div class="body">
+            <div class="images">
+              <img
+                src="./assets/img/featture2.jpg"
+                alt="Learner outcomes through our awesome platform"
+              />
+            </div>
+            <div class="content">
+              <h2 class="heading lv2">
+                Take the next step toward your personal and professional goals
+                with Lesson.
+              </h2>
+              <p class="desc">
+                Take the next step toward your personal and professional goals
+                with Lesson.
+              </p>
+              <a href="#!" class="btn cta-btn">Join Now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="blog">
+        <div class="main-content">
+          <div class="blog-top">
+            <h2 class="heading lv2">Our blog</h2>
+            <p class="desc">
+              Read our regular travel blog and know the latest update of tour
+              and travel
+            </p>
+          </div>
+
+          <div class="blog-list">
+            <!-- Blog item 1 -->
+            <div class="item">
+              <a href="#!">
+                <img
+                  src="./assets/img/blog.jpg"
+                  alt="How to become a pro web designer in 2022 and get remote job?"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <h3 class="title">
+                  <a href="#!"
+                    >How to become a pro web designer in 2022 and get remote
+                    job?
+                  </a>
+                </h3>
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <!-- Blog item 2 -->
+            <div class="item">
+              <a href="#!">
+                <img
+                  src="./assets/img/blog.jpg"
+                  alt="How to become a pro web designer in 2022 and get remote job?"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <h3 class="title">
+                  <a href="#!"
+                    >How to become a pro web designer in 2022 and get remote
+                    job?
+                  </a>
+                </h3>
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+
+            <!-- Blog item 3 -->
+            <div class="item">
+              <a href="#!">
+                <img
+                  src="./assets/img/blog.jpg"
+                  alt="How to become a pro web designer in 2022 and get remote job?"
+                  class="thumb"
+                />
+              </a>
+              <div class="info">
+                <span class="date">21 November 2021</span>
+                <h3 class="title">
+                  <a href="#!"
+                    >How to become a pro web designer in 2022 and get remote
+                    job?
+                  </a>
+                </h3>
+                <a href="#!" class="btn">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="dots">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+          </div>
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <div class="main-content">
+        <div class="row">
+          <!-- Column 1 -->
+          <div class="column">
+            <img src="./assets/img/Lesson..svg" alt="Lesson." class="logo" />
+            <p class="desc">
+              Need to help for your dream Career? trust us. With Lesson, study
+              becomes a lot easier with us.
+            </p>
+            <div class="socials">
+              <a href="#!">
+                <img src="./assets/img/Social.svg" alt="" class="icon" />
+              </a>
+            </div>
+          </div>
+          <!-- Column 2 -->
+          <div class="column">
+            <h3 class="title">Company</h3>
+            <ul class="list">
+              <li>
+                <a href="#!">About Us</a>
+              </li>
+              <li>
+                <a href="#!">Features</a>
+              </li>
+              <li>
+                <a href="#!">Our Pricing</a>
+              </li>
+              <li>
+                <a href="#!">Latest News</a>
+              </li>
+            </ul>
+          </div>
+          <!-- Column 3 -->
+          <div class="column">
+            <h3 class="title">Support</h3>
+            <ul class="list">
+              <li>
+                <a href="#!">FAQ’s</a>
+              </li>
+              <li>
+                <a href="#!">Terms & Conditions</a>
+              </li>
+              <li>
+                <a href="#!">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="#!">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <!-- Column 4 -->
+          <div class="column">
+            <h3 class="title">Address</h3>
+            <ul class="list">
+              <li>
+                <a href="#!"
+                  ><strong>Location:</strong> 27 Division St, New York, NY
+                  10002, USA</a
+                >
+              </li>
+              <li>
+                <a href="#!"><strong>Email:</strong> email@gmail.com</a>
+              </li>
+              <li>
+                <a href="#!"><strong>Phone:</strong> + 000 1234 567 890</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="copyright">
+          <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
